k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: ClusterIP
  ports:
    - name: goserver-service
      port: 8090
      targetPort: 8080
      protocol: TCP
